# telegram_bot_oxidebot

./: Cargo.toml  Readme.md
src/: api.rs  bot.rs  event.rs  lib.rs  segment.rs  utils.rs
